Hacky switch to JSON storage